# Courier_predict

./: .gitignore  LICENSE  Makefile  README.md  add_dvc.py  dvc.yaml  mlflow.db  pyproject.toml  requirements.txt  setup.py
.dvc/: .gitignore  config  dvc_id_example.json
.github/workflows/: python-app.yml
configs/: lgbm_parameters.yaml
data/interim/: .gitignore  merged_test.csv.dvc  merged_train.csv.dvc  test_features.csv.dvc  test_filled.csv.dvc  test_merged.csv.dvc  test_processed.csv.dvc  train_features.csv.dvc  train_filled.csv.dvc  train_merged.csv.dvc  train_processed.csv.dvc
data/processed/: .gitignore  test_final.csv.dvc  train_final.csv.dvc
data/raw/: .gitignore  facts.csv.dvc  shifts_prediction.csv.dvc  test.csv.dvc  train.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore  lgbm_model.info.yaml  lgbm_model.joblib  nan_filler_new.joblib.dvc
notebooks/: 01_EDA.ipynb  02_Data_preprocessig.ipynb  03_train_model.ipynb
references/: params.yaml
src/: __init__.py
src/data/: drop_features.py  merge_data.py  nan_filler.py  nan_filling.py
src/experiments/: baseline_experiment.py  lgbm_with_params_experiment.py
src/features/: build_features.py
src/models/: predict_model.py  train_model.py
tests/: basic_test.py  basic_tests.py  test_drop_features.py  test_merge_data.py  test_nan_filler.py  test_train_model.py
