[project]
name = "courierpredict"
version = "0.1.0"
description = "Courier prediction ML project"
authors = [
    {name = "Golik.D.", email = "golik3210@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4"

dependencies = [
    "mlflow==3.9.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.0.0",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.5.0",
    "dvc[gdrive]>=3.66.1",
    "black>=24.0.0",
    "click>=8.3.1",
    "joblib>=1.5.3",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "flake8 (>=7.3.0,<8.0.0)"
]
